--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ nav {
     width: 100%;
     padding: 15px 20px;
     background: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(7px);
     z-index: 10;
     transition: all 0.3s ease-in-out;
   }
@@ -180,7 +180,7 @@ nav {
 /* Portfolio Grid */
 .portfolio-grid {
     display: grid;
-    grid-template-columns: repeat(4, 2fr);
+    grid-template-columns: repeat(3, 2fr);
     gap: 80px;
     margin: 0 auto;
     padding: 20px;
@@ -253,16 +253,14 @@ nav {
 /* Grid for Logos and Clients */
 .portfolio-info-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
+    grid-template-columns: repeat(3, 0.4fr);
     justify-items: center;
     align-items: start;
     margin: 0 auto;
 }
 .portfolio-info-grid-painted {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
+    grid-template-columns: repeat(3, 0.4fr);
     justify-items: center;
     align-items: start;
     margin: 0 auto;
@@ -573,6 +571,7 @@ form {
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.5s ease, color 0.3s ease;
+    align-items: center;
   }
   
   button:hover {
@@ -896,4 +895,82 @@ form {
       text-align: center;
     }
 
+  }
+
+/* Loading Screen */
+#loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #131313; /* Semi-transparent background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Ensure it's above all other content */
+}
+
+/* Style for the loader image */
+.loader {
+    width: 150px; /* Adjust width of the image */
+    height: auto; /* Maintain aspect ratio */
+    animation: spin 1.15s linear infinite; /* Add the spin animation */
+}
+
+/* Keyframes to make the image spin */
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+/* Link styles */
+a {
+    color: #e7e7e7;
+    text-decoration: none;
+    font-size: 1.2em;
+}
+
+
+.page-transition {
+    opacity: 0;
+    filter: blur(10px);
+    transition: opacity 0.5s ease, filter 0.5s ease;
+  }
+  
+  /* When page is loaded */
+  .page-transition.show {
+    opacity: 1;
+    filter: blur(0px);
+  }
+  
+  /* Optional: Body fade-out on navigation */
+  body.fade-out {
+    opacity: 0;
+    filter: blur(10px);
+    transition: opacity 0.4s ease, filter 0.4s ease;
+  }
+
+  body {
+    opacity: 0;
+    filter: blur(10px);
+    transition: opacity 0.5s ease, filter 0.5s ease;
+  }
+  
+  /* When the page has loaded */
+  body.page-loaded {
+    opacity: 1;
+    filter: blur(0px);
+  }
+  
+  /* When navigating away */
+  body.fade-out {
+    opacity: 0;
+    filter: blur(10px);
+    transition: opacity 0.4s ease, filter 0.4s ease;
   }
